--- a/template.yml
+++ b/template.yml
@@ -13,6 +13,9 @@ Resources:
       # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
       ImageId: 'ami-08c40ec9ead489470' 
       InstanceType: t3.micro
+      Tags: 
+        - Key: Name
+          Value: MystackServer
   InstanceSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
