--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,14 +31,17 @@ jobs:
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
                 
-      - run:    
-          name: create Inventory file 
-          command: |
-              aws ec2 describe-instances --region=us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=MystackServer" --output text >> inventory 
+  create_inventory_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: create inventory file 
+        command: |
+             aws ec2 describe-instances --region=us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=MystackServer" --output text >> inventory
       - persist_to_workspace:
           root: ~/
           paths: 
-            - inventory
+            - inventory.txt  
                 
   # Exercise: Config and Deployment
   configure_infrastructure: 
@@ -48,7 +51,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/
-      - run: cat ~/inventory
+      - run: cat ~/inventory.txt
       - add_ssh_keys:
           fingerprints: ["36:54:ae:d7:99:3d:d6:ee:85:bf:8c:24:d3:44:e9:3b"] # You can get this ID in the section where you registered the SSH Key
       - run:
@@ -59,7 +62,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory main4.yml
+            ansible-playbook -i inventory.txt main4.yml
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -68,4 +71,9 @@ workflows:
     jobs:
       - say-hello
       - create_infrastructure
+      - create_inventory_file
+        requires: 
+            - create_infrastructure
       - configure_infrastructure
+          requires: 
+            - create_inventory_file
