--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,9 +71,9 @@ workflows:
     jobs:
       - say-hello
       - create_infrastructure
-      - create_inventory_file
+      - create_inventory_file:
           requires:
             - create_infrastructure
-      - configure_infrastructure
+      - configure_infrastructure:
           requires:
             - create_inventory_file
