--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,9 @@ jobs:
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
                 
-      - run: create inventory file 
-        command: |
+      - run: 
+          name: create inventory file 
+          command: |
              aws ec2 describe-instances --region=us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=MystackServer" --output text >> inventory.txt
       - persist_to_workspace:
           root: ~/
